@@ -204,3 +204,5 @@
 	* Imported uIP into the tree (see
 	   http://www.sics.se/~adam/uip/index.php/Main_Page)
 	* Adding socket(), bind(), connect()
+	* Added snprintf()
+
